--- a/public/css/main.css
+++ b/public/css/main.css
@@ -456,12 +456,12 @@ ul.nav a:hover {
 
 #about {
   padding: 5%; }
-  #about > img {
-    margin-bottom: 20px; }
   #about > p {
     text-indent: 30px; }
   #about .lazy {
     background-color: #FFF !important; }
+  #about .leo {
+    margin-bottom: 20px; }
 
 #contact {
   background-color: rgba(255, 255, 255, 0.95);
@@ -504,18 +504,20 @@ ul.nav a:hover {
     font-size: 30px; }
   h1, h2.brand-heading {
     text-indent: 0; }
+    h1 > span, h2.brand-heading > span {
+      display: block; }
   .intro .header {
     width: 100%;
     margin: 0;
     text-align: center; }
     .intro .header .subheader {
+      display: block;
       left: 0; }
   .intro .site-logo {
+    width: 50px;
     display: block;
     position: relative;
-    margin: 0 auto; }
-  .leo {
-    min-height: 500px; }
+    margin: 0 auto 10px; }
   section#about h2 {
     display: block; }
   .navbar-nav {
